# embedded-utils

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow_publish.yml
embedded_utils/: functions.py  main.py
